commit service: добавлены feign